# Lord-of-the-Seas

./: .gitignore  CMakeLists.txt  Lord of the Seas.cbp  Lord of the Seas.cscope_file_list  Lord of the Seas.depend  Lord of the Seas.layout  Lord-of-the-Seas.cbp  Lord-of-the-Seas.cscope_file_list  Lord-of-the-Seas.depend  Lord-of-the-Seas.layout  main.cpp
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/cpp/client/: main.cpp
app/src/main/cpp/client/application/: Application.cpp  Application.h
app/src/main/cpp/client/games/: Game.cpp  OnlineGame.cpp  OnlineGame.h
app/src/main/cpp/client/ui/: GameWindow.cpp  GameWindow.h  ResourceHolder.cpp  ResourceHolder.h  ResourceManager.cpp  ResourceManager.hpp  ResourceNotFoundException.cpp  ResourceNotFoundException.h  ResourceNotFoundException.hpp  ScoreDisplay.cpp  ScoreDisplay.h
app/src/main/cpp/client/ui/views/: ArmyView.cpp  GridSquareView.hpp  LandView.cpp  LandView.hpp  MovableView.hpp  ShipView.cpp  TreasureView.cpp  TreasureView.hpp  WaterView.cpp  WaterView.hpp
app/src/main/cpp/common/gamecore/: Army.cpp  Army.h  GridPoint.cpp  GridPoint.h  GridSquare.h  ILocalPlayerObserver.h  LandingEvent.h  LocalPlayer.h  Map.cpp  MapBuilder.hpp  Player.cpp  PlayerProxy.cpp  PlayerProxy.h  Ship.cpp  Ship.h
app/src/main/cpp/common/utils/graphics/: Button.cpp  Button.h  Graphics.h  ResourceManager.cpp  ResourceManager.hpp  ResourceNotFoundException.cpp  ResourceNotFoundException.hpp
client/: main.cpp
client/application/: Application.h
client/games/: Game.cpp  Game.h  OnlineGame.cpp  OnlineGame.h
client/ui/: Edge.hpp  GameWindow.cpp  GameWindow.h  PlayerView.cpp  PlayerView.hpp  ScoreDisplay.cpp  ScoreDisplay.h  ViewBuilder.cpp  ViewBuilder.hpp
client/ui/views/: ArmyView.cpp  ArmyView.hpp  GridSquareView.cpp  GridSquareView.hpp  LandView.cpp  LandView.hpp  MovableView.cpp  MovableView.hpp  PlayerView.cpp  PlayerView.hpp  ShipView.cpp  ShipView.hpp  TreasureView.cpp  TreasureView.hpp  WaterView.cpp
cmake_modules/: FindSFML.cmake
common/gamecore/: Army.cpp  Army.h  EdgeOwnerChangedEvent.hpp  GridPoint.cpp  GridPoint.h  GridSquare.cpp  GridSquare.h  IGridSquareObserver.hpp  IMapBuilderObserver.hpp  IMapObserver.hpp  IMovableObserver.hpp  IPlayerObserver.h  IUserEventObserver.h  Land.cpp  Land.h  LandingEvent.h  LocalPlayer.cpp  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.hpp  Movable.cpp  Movable.h  Player.cpp  Player.h  PlayerProxy.h  Position.hpp  Ship.cpp  Ship.h  Treasure.cpp  Treasure.h  Water.cpp  Water.h
common/utils/graphics/: Button.cpp  Button.h
gradle/wrapper/: gradle-wrapper.properties
include/: Application.h  Army.h  ArmyView.hpp  Button.h  Edge.hpp  Enums.h  Game.h  GameWindow.h  Graphics.h  GridPoint.h  GridSquare.h  IInputHandler.h  IInputHandlerObserver.h  ILocalPlayerObserver.h  IMapObserver.hpp  IMovableObserver.hpp  IPlayerObserver.h  IUserEventObserver.h  IWindowEventObserver.h  Land.h  LocalPlayer.h  Map.h  MapBuilder.hpp  MapCreator.hpp  Movable.h  MovableView.hpp  OnlineGame.h  Player.h  ScoreDisplay.h  Server.h  Ship.h  ShipView.hpp  Treasure.h  Water.h  WaterView.hpp
server/: Server.cpp  Server.h  server_main.cpp
src/: Application.cpp  Army.cpp  ArmyView.cpp  Button.cpp  Game.cpp  GameWindow.cpp  GridPoint.cpp  GridSquare.cpp  GridSquareView.cpp  Land.cpp  LandView.cpp  LocalPlayer.cpp  Map.cpp  MapBuilder.cpp  MapCreator.cpp  Movable.cpp  MovableView.cpp  OnlineGame.cpp  Player.cpp  ScoreDisplay.cpp  Server.cpp  Ship.cpp  ShipView.cpp  Treasure.cpp  TreasureView.cpp  Water.cpp  WaterView.cpp  main.cpp  server_main.cpp
